@@ -378,6 +378,18 @@ Branch 0.13 (unreleased changes)
 112. HADOOP-1345.  Fix HDFS to correctly retry another replica when a
      checksum error is encountered.  (Hairong Kuang via cutting)
 
+113. HADOOP-1205.  Improve synchronization around HDFS block map.
+     (Hairong Kuang via cutting)
+
+114. HADOOP-1353.  Fix a potential NullPointerException in namenode.
+     (Dhruba Borthakur via cutting)
+
+115. HADOOP-1354.  Fix a potential NullPointerException in FsShell.
+     (Hairong Kuang via cutting)
+
+116. HADOOP-1358.  Fix a potential bug when DFSClient calls skipBytes.
+     (Hairong Kuang via cutting)
+
 
 Release 0.12.3 - 2007-04-06
 
